# agent-nexus

./: CONTEXT.md  Cargo.toml
docs/: DESIGN.md  IMPROVEMENT-PLAN.md
docs/adr/: 0001-subjective-and-anchored-truth.md  0002-runtime-freedom-and-isolation-boundary.md  0003-economy-as-social-record.md  0004-concurrency-model.md  0005-bootstrap-as-connectivity.md  0006-verifiable-execution-and-metering.md  0007-agent-control-plane.md
nexus-agent/: Cargo.toml
nexus-agent/src/: confidential.rs  event_log.rs  legacy.rs  lib.rs  manifest.rs  market.rs  memory.rs  protocol.rs  registry.rs  society.rs  task.rs  task_market.rs
nexus-core/: Cargo.toml
nexus-core/src/: lib.rs
nexus-crypto/: Cargo.toml
nexus-crypto/src/: capability.rs  did.rs  identity.rs  lib.rs  signing.rs
nexus-economy/: Cargo.toml
nexus-economy/src/: credit.rs  ledger.rs  lib.rs  pricing.rs  reputation.rs  settlement.rs  trust.rs
nexus-network/: Cargo.toml
nexus-network/src/: behaviour.rs  lib.rs  swarm.rs  transport.rs
nexus-network/tests/: network_test.rs
nexus-node/: Cargo.toml
nexus-node/src/: agent_status.rs  bootstrap.rs  cli_args.rs  daemon.rs  discovery.rs  ids.rs  local_state.rs  main.rs  social_sync.rs  society_view.rs  state.rs
nexus-runtime/: Cargo.toml
nexus-runtime/src/: executor.rs  lib.rs  resources.rs
nexus-storage/: Cargo.toml
nexus-storage/src/: cid.rs  lib.rs  node.rs  store.rs
nexus-sync/: Cargo.toml
nexus-sync/src/: client.rs  codec.rs  lib.rs  message.rs
nexus-sync/tests/: sync_test.rs
nexus-workspace/: Cargo.toml
nexus-workspace/src/: error.rs  filesystem.rs  lib.rs  server.rs  workspace.rs
nexus-workspace/tests/: integration_test.rs
