[package]
name = "nexus-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-core.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
thiserror.workspace = true
