[package]
name = "nexus-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-core.workspace = true
nexus-crypto.workspace = true
nexus-sync.workspace = true
libp2p.workspace = true
libp2p-swarm = { version = "0.45", features = ["macros"] }
futures.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
nexus-agent.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
