[package]
name = "nexus-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nexus-node"
path = "src/main.rs"

[dependencies]
nexus-agent.workspace = true
nexus-core.workspace = true
nexus-crypto.workspace = true
nexus-economy.workspace = true
nexus-storage.workspace = true
nexus-runtime.workspace = true
nexus-workspace.workspace = true
nexus-network.workspace = true
nexus-sync.workspace = true
libp2p.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
hex.workspace = true
libc.workspace = true
