[package]
name = "nexus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-core.workspace = true
nexus-storage.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
