[package]
name = "nexus-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-core.workspace = true
nexus-storage.workspace = true
libp2p.workspace = true
futures.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
base64.workspace = true
async-trait.workspace = true

[dev-dependencies]

