[package]
name = "nexus-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-core.workspace = true
nexus-crypto.workspace = true
nexus-storage.workspace = true
nexus-runtime.workspace = true
nexus-network.workspace = true
nexus-sync.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
